UI, ViewModel & Click Listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CashAppStocks</string>
+    <string name="stocks_empty_response">Empty Portfolio</string>
 </resources>
